--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.14",
+    "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
