--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/express": "^4.17.14",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "bootstrap": "^5.2.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
